Fix align self center in navigation

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -254,6 +254,7 @@ h3 {
 }
 
 .nav-content {
+  align-self: center;
   max-width: 1110px;
   padding-top: 200px;
   padding-bottom: 100px;
